--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
     "format": "prettier --write \"src/**/*.ts\"",
     "serve:ssr:PortfolioV3": "node dist/portfolio-v3/server/server.mjs"
   },
@@ -36,17 +36,15 @@
     "@angular/language-server": "^18.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.19",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.1.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.1.5",
     "typescript": "~5.4.2"
   }
 }
