--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,13 +2,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "jest"
     ]
-  },
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  }
 }
