--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "three": "^0.165.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -38,6 +39,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.18.0",
+    "@types/three": "^0.165.0",
     "autoprefixer": "^10.4.19",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.1.0",
