--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "src/robots.txt",
               "src/sitemap.xml"
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss","node_modules/prismjs/themes/prism-dark.css"],
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": {
