--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.2",
     "express": "^4.18.2",
+    "highlight.js": "^11.10.0",
     "marked": "^14.1.0",
+    "marked-highlight": "^2.1.4",
     "primeicons": "^7.0.0",
-    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -37,7 +38,6 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
-    "@types/prismjs": "^1.26.4",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
