--- a/.github/workflows/azure-container.yml
+++ b/.github/workflows/azure-container.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker buildx build --push \
-            --platform linux/amd64,linux/arm64 \
+            --platform linux/amd64 \
             -t portfoliov3.azurecr.io/portfolio-v3:latest .
