--- a/.github/workflows/azure-container.yml
+++ b/.github/workflows/azure-container.yml
@@ -28,3 +28,11 @@ jobs:
           docker buildx build --push \
             --platform linux/amd64 \
             -t portfoliov3.azurecr.io/portfolio-v3:latest .
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: portfoliov3
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          images: portfoliov3.azurecr.io/portfolio-v3:latest
+
