--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "portfolio-v3",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "node sitemap-generator.js && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:PortfolioV3": "node dist/portfolio-v3/server/server.mjs"
